rtic/ui/spawn-local-from-init.stderr
error[E0425]: cannot find function `spawn` in module `foo`
  --> ui/spawn-local-from-init.rs:13:14
   |
13 |         foo::spawn().ok();
   |              ^^^^^ not found in `foo`
   |
   = help: consider importing this function:
           std::thread::spawn
